bloonix-agent (0.41) released at 2014-12-17

    * Improved the communication stack between parent and children.
    * Improved the check distribution to children.

bloonix-agent (0.40) released at 2014-12-11

    * Fixed the benchmark functions.

bloonix-agent (0.39) released at 2014-12-03

    * Fixed parsing nagios argument list.

bloonix-agent (0.38) released at 2014-12-03

    * Kicked debug messages.
    * Log command and arguments of nagios with log level info.

bloonix-agent (0.37) released at 2014-11-30

    * Changed the boot facility.
    * Fixed sudo mapping for services.

bloonix-agent (0.36) released at 2014-11-16

    * Added use_sudo as global configuration parameter for the agent.
    * Fixed owner of all directories and files within /etc/bloonix.

bloonix-agent (0.35) released at 2014-11-08

    * Decreased the poll interval from 20 to 15 seconds because the
      the lowest interval of check_frequency=high is 15 seconds.

bloonix-agent (0.34) released at 2014-11-05

    * Increased the default timeout for checks from 30 to 60 seconds.

bloonix-agent (0.33) released at 2014-11-05

    * Fixed the init script and removed S20 or any other
      prefix from basename.

bloonix-agent (0.32) released at 2014-11-03

    * Updated the license information.

bloonix-agent (0.31) released at 2014-10-25

    * On systems with systemd STDOUT and STDERR are redirected
      to syslog by default. On sysvinit system it's possible to
      redirect STDOUT and STDERR to syslog.

bloonix-agent (0.30) released at 2014-10-24

    * Disable die_on_errors by default so that the logger
      does not die on errors.

bloonix-agent (0.29) released at 2014-08-25

    * Splitted the bloonix-agent package into 2 packages.
      Dependencies are now find in the bloonix-core package.
    * Switched back to the original HTTP::Tiny.

bloonix-agent (0.28) released at 2014-06-03

    * Added add_pre_check and post_check to Bloonix::REST.